@@ -23,4 +23,4 @@ class TraitsTest1 {
 
 ?>
 --EXPECTF--	
-Fatal error: Declaration of THelloB::hello() must be compatible with THelloA::hello($a) in %s on line %d
+Fatal error: Declaration of THelloA::hello($a) must be compatible with THelloB::hello() in %s on line %d
